--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -8,7 +8,6 @@
     <script src="/js/about.js"></script>
 </head>
 <body>
-    <h1>KIKIKI</h1>
-    <p></p>
+    <h1>{{title}}</h1>
 </body>
 </html>
